--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,12 @@ dependencies {
     })
 
     //Add Library
-    
+
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.zxing:core:3.2.1'
+    compile 'com.google.code.gson:gson:2.2.4'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.code.gson:gson:2.2.4'}
+}
